<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/title"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/title" />

    <Button
        android:id="@+id/play"
        style="@style/button_style" 
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_OK" />

    <Button
        android:id="@+id/help"
        style="@style/button_style" 
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/help"  />

    <Button
        android:id="@+id/about"
        style="@style/button_style" 
        android:layout_below="@+id/help"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/about"  />
    
    <Button
        android:id="@+id/exit"
        style="@style/button_style" 
        android:layout_below="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/quit"/>

</RelativeLayout>